# python-module

./: .pre-commit-config.yaml  LICENSE  README.md  setup.cfg  tox.ini
.github/workflows/: pre-commit.yml  workflow.yml
src/python_module/: mock_file.py
tests/: test_module.py
