[metadata]
name = CHG: REPO-NAME
version = 0.0.1
description = CHG: MODIFY DESCRIPTION
long_description = file: README.md
long_description_content_type = text/markdown
url = https://esw-github.33858.volvo.net/EMOB/sql-connect
author = CHG: Add author
author_email = CHG: Add email 
license_file = LICENSE

[options]
packages = find:
install_requires =
    CHG: Add requirements
package_dir =
    = src

[options.packages.find]
where = src
exclude = tests*

[options.extras_require]
dev =
    pre-commit
    pytest
    coverage
    covdefaults

[flake8]
ignore =
    # space before : (needed for how black formats slicing)
    E203,
    # line break before binary operator
    W503
max-line-length = 88
select = B,C,E,F,W,T4,B9

[pydocstyle]
match-dir=src
match=(?!test_).*\.py|.*(?!_test).py

[tool.isort]
profile = "black"

[coverage:run]
plugins = covdefaults
source = CHG: REPO-NAME

[coverage:report]
skip_covered = False
